# solidus

./: .clippy.toml  .editorconfig  .gitignore  .oxlintrc.json  .prototools  .release-please-manifest.json  .rustfmt.toml  Cargo.toml  README.md  deny.toml  dprint.json  moon.yml  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  renovate.json
.github/: run-info.sh  safe-settings.yml
.github/actions/conventional-pr/: action.yml
.github/actions/fuzz-cache/: action.yml
.github/actions/moon-ci/: action.yml
.github/actions/moon-ci-matrix/: action.yml  notes.md
.github/actions/moon-raa/: action.yml  lib.js  rm.js  run.js
.github/actions/moon-run/: action.yml
.github/actions/moon-setup/: action.yml
.github/actions/raa-close/: action.yml
.github/actions/raa-open/: action.yml
.github/actions/raa-teardown/: action.yml
.github/actions/setup/: action.yml
.github/actions/validate-pr-title/: action.yml
.github/workflows/: deploy.yml  fuzz.yml  main-fuzz.yml  main.yml  pr-close.yml  pr-fuzz.yml  pr.yml  publish-crates.yml  publish-go.yml  publish-npm-slash-javascript.yml  publish-npm-slash-web.yml  publish-pypi.yml  publish-riff.yml  publish-to-registry.yml  publish-wasm.yml  publish.yml  release.yml  review.yml  scheduled.yml
.moon/: toolchains.yml  workspace.yml
.moon/partials/: publish-crate.yml
.moon/tasks/: rust.yml  security.yml
docs/: 0006-repository-structure-and-project-boundaries.md  0007-build-tooling-and-toolchain-management.md  parser-architecture.md  slash-cmd parseing sematic.md  slash-command-syntax-rfc-v1.1.0.txt  slash-command-syntax-rfc-v1.1.1.txt  slash-parser CLI Specification.md  slash-parser-engine-spec-v0.5.0.md  slash-parser-sdk-spec-v0.2.0.md  slash-parser-spec-v0.3.0.md  slash-parser.md
docs/adrs/: 0001-record-architecture-decisions.md  0001-use-forward-slash-as-command-trigger-character.md  0002-adopt-slash-command-syntax-rfc-as-normative-specification.md  0002-line-continuation-with-trailing-space-slash.md  0003-fenced-block-syntax-for-raw-multi-line-payloads.md  0003-lowercase-only-command-names.md  0004-posix-backslash-continuation-and-fenced-multi-line-payloads.md  0004-state-machine-parser-with-no-ast.md  0005-backtick-only-fence-delimiters.md  0005-opaque-argument-payload-with-command-level-parsing.md  0006-opaque-payload-principle.md  0006-repository-structure-and-project-boundaries.md  0007-build-tooling-and-toolchain-management.md  0007-total-function-guarantee.md  0008-sequential-zero-based-command-ids.md  0008-strict-two-character-whitespace-definition.md  0009-jsonl-default-output-with-pretty-json-array-option.md  0009-roundtrip-fidelity-invariant.md  0010-input-model-and-line-ending-normalization.md  0010-multi-engine-fuzz-testing-with-datatest-regression-prevention.md
engine/: Cargo.toml  moon.yml
engine/fuzz/: .gitignore  Cargo.toml  README.md  fuzz-manage.sh  fuzz-run.sh  moon.yml  rust-toolchain.toml
engine/fuzz-common/: Cargo.toml  moon.yml
engine/fuzz-common/src/: assertions.rs  lib.rs  render.rs  types.rs
engine/fuzz/harnesses/: parse_document_structured.rs  parse_document_unstructured.rs
engine/fuzz/regressions/: .gitattributes
engine/fuzz/regressions/parse_document_structured/: regression-crash-12251bb00cc43a  regression-crash-15383cba879d1b  regression-crash-8f4ecef8c63ef6  regression-crash-8fa94e6f417b51  regression-crash-9140fde1aa831a  regression-crash-dd4fd56edddc34
engine/src/: classify.rs  fence.rs  join.rs  lib.rs  mod.rs  normalize.rs  parse.rs  single_line.rs  test_helper.rs  text.rs  types.rs
engine/src/integration_tests/: mod.rs  normalize_join.rs  normalize_join_classify.rs  spec_examples.rs
engine/tests/: fuzz_regression_parse_document_structured.rs  fuzz_regression_parse_document_unstructured.rs  parse_document.rs
fuzz/: Cargo.toml  README.md
parser/: Cargo.toml  direction.md  moon.yml
parser-core/: Cargo.toml
parser-core/proptest-regressions/parser/tests/: proptest.txt
parser-core/src/: domain.rs  lib.rs  serialize.rs  to_plaintext.rs
parser-core/src/parser/: mod.rs
parser-core/src/parser/tests/: mod.rs  proptest.rs
parser/src/: classify.rs  lib.rs  text.rs
parser/src/application/: command_accumulate.rs  command_finalize.rs  document_parse.rs  line_classify.rs  mod.rs  text_collect.rs
parser/src/application/tests/: from-old-parser-core.txt  mod.rs  proptest.rs
parser/src/domain/: errors.rs  mod.rs  types.rs
parser/src/integration_tests/: proptest.rs
parser/tests/: from-old-parser-core.txt  mod.rs  orchestration_tests.rs
riff-cli/: .goreleaser.yaml  Dockerfile  moon.yml
scripts/: gen-workflows.sh
sdks/ruby/: moon.yml
sdks/rust/: moon.yml
sdks/web/: moon.yml
slash-go/: moon.yml
slash-javascript/: moon.yml
slash-python/: moon.yml
slash-rust/: moon.yml
slash-web/: moon.yml
wasm-javascript/: moon.yml
wasm-javascript/scripts/: attach-release-assets.sh
wasm-wasi/scripts/: attach-release-assets.sh
website/: README.md  astro.config.mjs  moon.yml  nanoid-non-secure-shim.mjs  package.json
website/src/: content.config.ts
website/src/content/docs/: 404.mdx  examples.md  index.mdx  soundcheck.md
website/src/content/docs/sdks/: rust.md  wasi.md  wasm.md
website/src/content/docs/spec/: engine.md  syntax.md
