[package]
name = "slash-parser-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
honggfuzz = "0.5"
parser-core = { path = "../parser-core" }

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false

[[bin]]
name = "parse_to_domain"
path = "fuzz_targets/parse_to_domain.rs"
doc = false
